--- a/style.css
+++ b/style.css
@@ -47,3 +47,10 @@ form {
     display: flex;
     gap: 8px;
 }
+
+.delete {
+    color: rgba(255, 58, 58, 0.5);
+    background-color: rgb(240, 240, 240);
+    border: none;
+    border-radius: 8px;
+}
