--- a/style.css
+++ b/style.css
@@ -48,11 +48,19 @@ form {
     align-items: center;
 }
 
-.delete {
-    color: rgba(255, 58, 58, 0.5);
+.delete,
+.status {
     background-color: rgb(240, 240, 240);
     border: none;
     border-radius: 8px;
+}
+
+.delete {
+    color: rgba(255, 58, 58, 0.5);
+}
+
+.status {
+    color: rgba(119, 136, 153, 0.5);
 }
 
 .delete:hover {
