--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+button {
+    height: 24px;
+}
+
 button:hover {
     cursor: pointer;
 }
@@ -26,9 +30,8 @@ h1 {
     font-size: 2rem;
     width: 48px;
     height: 48px;
-    margin-bottom: 8px;
-    color: rgb(50, 50, 50);
     background-color: white;
+    color: rgb(50, 50, 50);
     border-radius: 8px;
 }
 
@@ -42,6 +45,7 @@ h1 {
 
 .add-book {
     font-size: 1.5rem;
+    margin: 8px 0px 32px 0px;
 }
 
 dialog {
@@ -70,4 +74,45 @@ input[type="number"] {
 
 .read > input {
     margin: 0 auto;
+}
+
+.book-display {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 100vw;
+    padding: 0 10vw;
+    gap: 16px;
+}
+
+.book {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 8px;
+    background-color: rgba(215, 246, 255, 0.55);
+    padding: 12px;
+    border-radius: 8px;
+    font-size: 1.1rem;
+    border: 1px solid rgb(122, 122, 122);
+    width: 25vw;
+}
+
+.book > button {
+    font-size: 0.9rem;    
+    background-color: rgb(250, 250, 250);
+    border-radius: 4px;
+    border-width: 1px;
+}
+
+.book > button:hover {
+    background-color: rgb(241, 241, 241);
+}
+
+.book > button:active {
+    background-color: white;
+}
+
+.read-button {
+    margin-top: auto;
 }
