--- a/style.css
+++ b/style.css
@@ -1,118 +1,127 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
 }
 
 button {
-    height: 24px;
-}
-
-button:hover {
-    cursor: pointer;
+  padding: 8px;
+  cursor: pointer;
+  font-size: 1rem;
 }
 
 h1 {
-    text-align: center;
-    padding: 32px 0px;
-    background-color: rgb(185, 214, 223);
-    color: rgb(50, 50, 50);
+  text-align: center;
+  padding: 32px 0px;
+  background-color: rgb(185, 214, 223);
+  color: rgb(50, 50, 50);
 }
 
-.display {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 16px;
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2vh;
 }
 
-#add-book-button {
-    font-size: 2rem;
-    width: 48px;
-    height: 48px;
-    background-color: white;
-    color: rgb(50, 50, 50);
-    border-radius: 8px;
+#add-book {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  width: 48px;
+  height: 48px;
+  color: rgb(50, 50, 50);
+  border-radius: 8px;
+  transition: background-color 0.3s;
+  background-color: white;
 }
 
-#add-book-button:hover {
-    background-color: rgb(213, 231, 237);
+#add-book:hover {
+  transition: background-color 0.3s;
+  background-color: rgb(213, 231, 237);
 }
 
-#add-book-button:active {
-    background-color: rgb(230, 250, 255);
+#add-book:active {
+  transition: background-color 0s;
+  background-color: rgb(230, 250, 255);
 }
 
-.add-book {
-    font-size: 1.5rem;
-    margin: 8px 0px 32px 0px;
+#add-book + p {
+  font-size: 1.5rem;
 }
 
 dialog {
-    margin: auto;
-    padding: 24px 24px 32px 24px;
-    height: max-content;
-    width: 350px;
+  margin: auto;
+  padding: 32px;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  font-size: 1.1rem;
 }
 
-input[type="text"],
-input[type="number"] {
-    width: 100%;
-    padding: 2px;
+.form-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2vw;
 }
 
-.read {
-    display: flex;
+input {
+  width: 400px;
+  padding: 8px;
+  font-size: 1rem;
 }
 
-.read > input {
-    margin: 0 auto;
+#read {
+  width: 50px;
+  height: 30px;
+}
+
+.read-group {
+  align-self: center;
 }
 
 .book-display {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100vw;
-    padding: 0 10vw;
-    gap: 16px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 90vw;
+  gap: 3vw;
 }
 
 .book {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 12px;
-    background-color: rgba(215, 246, 255, 0.55);
-    padding: 12px;
-    border-radius: 8px;
-    font-size: 1.1rem;
-    border: 1px solid rgb(122, 122, 122);
-    width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+  min-width: 250px;
+  padding: 16px;
+  border-radius: 8px;
+  background-color: rgba(215, 246, 255, 0.55);
+  border: 1px solid rgb(122, 122, 122);
+  font-size: 1.1rem;
 }
 
 .book > button {
-    font-size: 0.9rem;    
-    background-color: rgb(250, 250, 250);
-    border-radius: 4px;
-    border-width: 1px;
+  font-size: 0.9rem;
+  background-color: rgb(250, 250, 250);
+  border-radius: 8px;
+  border-width: 1px;
 }
 
 .book > button:hover {
-    background-color: rgb(241, 241, 241);
+  background-color: rgb(241, 241, 241);
 }
 
 .book > button:active {
-    background-color: white;
-}
-
-.read-button {
-    margin-top: auto;
+  background-color: white;
 }
